:wrench: JVM 최적화, DB 서버 분리, 커넥션 풀 설정