@@ -10,4 +10,8 @@ RUN chmod +x gradlew && ./gradlew build -x test
 FROM eclipse-temurin:21-jre
 WORKDIR /app
 COPY --from=builder /app/build/libs/*.jar app.jar
-ENTRYPOINT ["java", "-jar", "app.jar"]
+ENTRYPOINT ["java", \
+  "-Xms256m", "-Xmx512m", \
+  "-XX:+UseZGC", "-XX:+ZGenerational", \
+  "-Dfile.encoding=UTF-8", \
+  "-jar", "app.jar"]
